2011-05-01	Sergey S. Sergeev

	* test/runme.sh: added ability to run the test cases with different 
	arguments, for example:
		- ./runme.sh (by default)
		- ./runme.sh --verbose --repeat 1 AllTests (launch test suite in
		verbose mode)
		- ./runme.sh --bootstrap config.inc.php core/CacheTest.class.php (
		launch 'CacheTest' only)

2011-04-20	Viatcheslav Y. Tsyrulnik

	* misc/Autoloader.inc.php: all autoloaders merged in one abstract class.

	* misc/BaseException.inc.php: for now it's duplication of BaseException,
	needed by wholeClassCache.

	* global.inc.php.tpl: spl_autoload_register instead of including file
	with __autoload().

	* misc/autoload.*: obsolete.

2011-02-15	Evgeny V. Kokovikhin

	* core/Cache/CyclicAggregateCache.class.php, test/core/CacheTest.class.php, 
	core/Cache/AggregateCache.class.php, core/Cache/BaseAggregateCache.class.php:
	new implementation of AggregateCache added.

2011-01-26	Evgeny V. Kokovikhin

	* main/Utils/FileUtils: makeUniqueLatinName method added
	* core/Base/Date, main/Base/CalendarDay: __sleep and __wakeup method added.

2011-01-24	Evgeny N. Sokolov

	* databases tests: skip, when fail connection, instead fatal

2011-01-19	Evgeny N. Sokolov

	* main/Math/MathUtils.class.php: add compareFloat function

2010-12-08	Evgeny V. Kokovikhin

	* main/Utils/IO/Socket.class.php: try to close socket immediately.
	see: http://ru.php.net/manual/en/function.socket-close.php#66810

2010-12-02	Evgeny V. Kokovikhin

	* meta/classes/MetaConfiguration.class.php: more informative error messages
	at the meta configuration

2010-12-01	Evgeny V. Kokovikhin

	* main/Utils/IO/Socket.class.php: eat exception 
	if we try to close already closed socket

2010-11-11	Evgeny V. Kokovikhin

	* main/DAOs/Workers/CommonDaoWorker.class.php: just change exception message

2010-11-09	Evgeny V. Kokovikhin

	* main/DAOs/Workers/CommonDaoWorker.class.php: human-frendly message in 
	the exception

2010-10-25	Sergey S. Sergeev
